# Klip

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  lib.rs  main.rs
src/components/: AboutScreen.tsx  DownloadButton.tsx  DownloadItemCard.tsx  DownloadScreen.tsx  EmptyState.tsx  ErrorBoundary.tsx  HistoryScreen.tsx  PlaylistScreen.tsx  QualitySelector.tsx  SettingsScreen.tsx  TitleBar.tsx  Toast.tsx  TopNav.tsx  TrimSlider.tsx
src/hooks/: useClipboardDetect.ts  useDownloads.ts  useHistory.ts  useSettings.ts  useToast.ts
src/lib/: platforms.ts
src/styles/: globals.css
